--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-safe-area-context": "^4.2.4",
-    "react-native-screens": "^3.13.1"
+    "react-native-screens": "^3.13.1",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
